
- bpo-28876: ``bool(range)`` works even if ``len(range)``
  raises :exc:`OverflowError`.

- bpo-29600: Fix wrapping coroutine return values in StopIteration.

- bpo-28856: Fix an oversight that %b format for bytes should support objects
  follow the buffer protocol.

- bpo-29714: Fix a regression that bytes format may fail when containing zero
  bytes inside.

Library
-------

- bpo-30557: faulthandler now correctly filters and displays exception codes
  on Windows

- bpo-30378: Fix the problem that logging.handlers.SysLogHandler cannot
  handle IPv6 addresses.

- bpo-29960: Preserve generator state when _random.Random.setstate()
  raises an exception.  Patch by Bryan Olson.

- bpo-30414: multiprocessing.Queue._feed background running
  thread do not break from main loop on exception.

- bpo-30003: Fix handling escape characters in HZ codec.  Based on patch
  by Ma Lin.

- bpo-30301: Fix AttributeError when using SimpleQueue.empty() under
  *spawn* and *forkserver* start methods.

- bpo-30329: imaplib and poplib now catch the Windows socket WSAEINVAL error
  (code 10022) on shutdown(SHUT_RDWR): An invalid operation was attempted.
  This error occurs sometimes on SSL connections.

- bpo-30375: Warnings emitted when compile a regular expression now always
  point to the line in the user code.  Previously they could point into inners
  of the re module if emitted from inside of groups or conditionals.

- bpo-30048: Fixed ``Task.cancel()`` can be ignored when the task is
  running coroutine and the coroutine returned without any more ``await``.

- bpo-30298: Weaken the condition of deprecation warnings for inline modifiers.
  Now allowed several subsequential inline modifiers at the start of the
  pattern (e.g. ``'(?i)(?s)...'``).  In verbose mode whitespaces and comments
  now are allowed before and between inline modifiers (e.g.
  ``'(?x) (?i) (?s)...'``).

- bpo-29990: Fix range checking in GB18030 decoder.  Original patch by Ma Lin.
