@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- bpo-29581: ABCMeta.__new__ now accepts ``**kwargs``, allowing abstract base
+  classes to use keyword parameters in __init_subclass__. Patch by Nate Soares.
+
 - bpo-30557: faulthandler now correctly filters and displays exception codes
   on Windows
 
